# robust-stats

./: .gitignore  Cargo.toml  Makefile  README.md  rust-analyzer.toml
crates/hilbert-tf/: Cargo.toml
crates/hilbert-tf/examples/: debug_freq.rs  debug_freq_no_dc.rs  validation.rs
crates/hilbert-tf/src/: lib.rs
crates/robust-changepoint/: Cargo.toml  README.md
crates/robust-changepoint/examples/: acceleration_detection.rs  basic_detection.rs  realistic_scenarios.rs
crates/robust-changepoint/src/: cusum.rs  ewma.rs  kernel.rs  lib.rs  polynomial_slopes.rs  slopes.rs  traits.rs  types.rs  visualization.rs
crates/robust-confidence/: Cargo.toml  README.md
crates/robust-confidence/benches/: confidence_benchmarks.rs
crates/robust-confidence/src/: api.rs  asymptotic.rs  bootstrap.rs  bootstrap_methods.rs  bootstrap_workspace.rs  estimator_factories.rs  lib.rs  maritz_jarrett.rs  maritz_jarrett_two_sample.rs  quantile_bootstrap.rs  traits.rs  types.rs
crates/robust-core/: Cargo.toml  README.md
crates/robust-core/benches/: memory_layout_bench.rs  primitives_bench.rs
crates/robust-core/src/: adapters.rs  batch.rs  builder.rs  comparison.rs  error.rs  factory.rs  kernels.rs  lib.rs  math.rs  numeric.rs  sparse.rs  tiled.rs  traits.rs  utils.rs  weights.rs
crates/robust-core/src/execution/: hierarchical.rs  mod.rs
crates/robust-core/src/pipeline/: context.rs  events.rs  mod.rs  types.rs
crates/robust-core/src/primitives/: mod.rs  traits.rs
crates/robust-core/src/primitives/backends/: mod.rs
crates/robust-core/src/primitives/backends/avx2/: dispatch.rs  mod.rs
crates/robust-core/src/primitives/backends/avx2/ops/: mod.rs
crates/robust-core/src/primitives/backends/avx2/ops/dot_product/: f32.rs  f64.rs  mod.rs  scalar.rs
crates/robust-core/src/primitives/backends/avx2/ops/sparse_tile/: f32.rs  f64.rs  mod.rs  scalar.rs
crates/robust-core/src/primitives/backends/avx2/ops/sparse_weighted_sum/: f32.rs  f64.rs  mod.rs  scalar.rs
crates/robust-core/src/primitives/backends/avx2/ops/sum/: f32.rs  f64.rs  mod.rs  scalar.rs
crates/robust-core/src/primitives/backends/avx2/utils/: mod.rs
crates/robust-core/src/primitives/backends/avx512/: mod.rs
crates/robust-core/src/primitives/backends/scalar/: mod.rs
crates/robust-core/src/workspace/: bootstrap.rs  mod.rs
crates/robust-core/tests/: test_auto_engine.rs  weight_cache_tests.rs
crates/robust-core/tests/common/: mod.rs
crates/robust-effect/: Cargo.toml  README.md
crates/robust-effect/src/: cles.rs  cliff_delta.rs  cohen_d.rs  correlation.rs  glass_delta.rs  hedges_g.rs  lib.rs  traits.rs  types.rs  variance_explained.rs
crates/robust-histogram/: Cargo.toml  README.md
crates/robust-histogram/examples/: qrde_demo.rs
crates/robust-histogram/src/: builders.rs  lib.rs  ops.rs  traits.rs  types.rs
crates/robust-modality/: Cargo.toml  README.md
crates/robust-modality/examples/: event_based_modality.rs  qrde_modality.rs
crates/robust-modality/src/: builder.rs  detector.rs  lib.rs  test_data.rs  traits.rs  types.rs  visualization.rs
crates/robust-modality/tests/: distribution_tests.rs  outlier_tests.rs  parameter_tests.rs  sensitivity_tests.rs
crates/robust-polars/: Cargo.toml
crates/robust-polars/src/: config.rs  error.rs  lib.rs  tests.rs  traits.rs
crates/robust-polars/src/methods/: mod.rs  quantile.rs  spread.rs
crates/robust-polars/tests/: test_cache_api.rs  test_data_types.rs  test_edge_cases.rs  test_quantiles.rs  test_spread_methods.rs
crates/robust-polars/tests/common/: mod.rs
crates/robust-quantile/: Cargo.toml  README.md
crates/robust-quantile/benches/: dispatch_strategy_bench.rs  quick_benchmark.rs
crates/robust-quantile/src/: adapter_impls.rs  error.rs  factories.rs  lib.rs  naive_reference.rs  processing_traits.rs  quantile_variance_adapter.rs  traits.rs
crates/robust-quantile/src/confidence/: maritz_jarrett.rs  mod.rs
crates/robust-quantile/src/estimators/: generic.rs  harrell_davis.rs  mod.rs  trimmed_hd.rs
crates/robust-quantile/src/kernels/: mod.rs  tiled_weighted_sum.rs  weighted_sum.rs
crates/robust-quantile/src/weights/: harrell_davis.rs  hdi.rs  mod.rs  parallel.rs
crates/robust-quantile/tests/: statistical_equivalence.rs
crates/robust-spread/: Cargo.toml  README.md
crates/robust-spread/src/: adapters.rs  factories.rs  iqr.rs  kernels.rs  lib.rs  mad.rs  moments.rs  qad.rs  traits.rs  trimmed.rs
crates/robust-stability/: Cargo.toml  README.md
crates/robust-stability/src/: hilbert_analysis.rs  lib.rs  offline.rs  online.rs  statistical.rs  traits.rs  types.rs  visualization.rs  window_traits.rs
crates/robust-stability/src/algorithms/: mod.rs  stability_tracker.rs  statistical_window.rs
crates/robust-stability/tests/: property_tests.rs  real_world_signals.rs  window_analyzer_tests.rs
