[package]
name = "robust-stats"
version = "0.1.0"
edition = "2021"
authors = ["Max Tottenham <mtottenh@gmail.com>"]
license = "MIT"
repository = "https://github.com/mtottenh/robust-stats"
keywords = ["statistics", "robust", "modality", "lowlands"]
categories = ["science", "algorithms", "mathematics"]
description = "Robust statistical analysis toolkit with emphasis on multimodality detection"

[dependencies]
# Re-export workspace crates
robust-core = { path = "crates/robust-core", features = ["simd", "parallel"] }

robust-quantile = { path = "crates/robust-quantile", features = [
    "simd",
    "parallel",
] }
robust-histogram = { path = "crates/robust-histogram", features = ["quantile"] }
robust-spread = { path = "crates/robust-spread", features = ["quantile"] }
robust-confidence = { path = "crates/robust-confidence" }
robust-effect = { path = "crates/robust-effect" }
robust-modality = { path = "crates/robust-modality"}
robust-changepoint = { path = "crates/robust-changepoint" }
robust-stability = { path = "crates/robust-stability" }
# robust-viz = { path = "crates/robust-viz", optional = true, features = [
#     "modality",
#     "changepoint",
#     "stability",
# ] }
# hilbert-tf = { path = "crates/hilbert-tf" }

[features]
default = []
parallel = [
    "robust-core/parallel",
    "robust-quantile/parallel",
    "robust-spread/parallel",
    "robust-confidence/parallel",
]
# TODO: Re-enable after updating to new trait system
# viz = ["robust-viz"]

[[bench]]
name = "simd_sparse_sum_bench"
harness = false
path = "benches/simd_benchmark.rs"

[[bench]]
name = "realistic_quantile_benchmark"
harness = false

[[bench]]
name = "pipeline_optimization_bench"
harness = false

[[bench]]
name = "weight_computation_bench"
harness = false

[dev-dependencies]
rand = { workspace = true }
rand_distr = { workspace = true }
rand_chacha = { workspace = true }
anyhow = { workspace = true }
criterion = { workspace = true }
rayon = { workspace = true }
charming = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
    "fmt",
    "json",
] }


[workspace]
members = [
    "crates/robust-core",
    "crates/robust-quantile",
    "crates/robust-histogram",
    "crates/robust-spread",
    "crates/robust-confidence",
    "crates/robust-effect",
    "crates/robust-modality",
    "crates/robust-changepoint",
    "crates/robust-stability",
    "crates/robust-polars",
    # "crates/statistical-analysis-pipeline",
    # "crates/robust-viz",
    "crates/hilbert-tf",
]
resolver = "2"

# Exclude crates that are being refactored
exclude = [
    "crates/robust-stability",
    "crates/statistical-analysis-pipeline",
    "crates/robust-viz",
    "crates/hilbert-tf",
]

[workspace.package]
edition = "2021"
authors = ["Max Tottenham <mtottenh@gmail.com>"]
license = "MIT"
repository = "https://github.com/mtottenh/robust-stats"
keywords = ["statistics", "robust", "analysis", "data-science"]
categories = ["science", "algorithms", "mathematics"]

[workspace.dependencies]
# Core dependencies
statrs = "0.16"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
num-traits = "0.2"

# Math and linear algebra
nalgebra = "0.29"
ordered-float = "5.0"

# Parallelism
rayon = "1.10"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
bitflags = "2.0"
bytemuck = { version = "1.14", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

# Data processing
csv = "1.3"
polars = "0.48"

# Visualization
plotters = "0.3"
charming = "0.5"

# Testing dependencies
criterion = { version = "0.5", features = ["html_reports"] }
approx = "0.5"
proptest = "1.0"

# Other
lazy_static = "1.5"
wide = "0.7"
dashmap = "5.0"
serde_json = "1.0"

# Internal crates
robust-core = { path = "crates/robust-core" }
robust-quantile = { path = "crates/robust-quantile" }
robust-histogram = { path = "crates/robust-histogram" }
robust-spread = { path = "crates/robust-spread" }
robust-confidence = { path = "crates/robust-confidence" }
robust-modality = { path = "crates/robust-modality" }
robust-changepoint = { path = "crates/robust-changepoint" }
robust-stability = { path = "crates/robust-stability" }
robust-effect = { path = "crates/robust-effect" }
robust-polars = { path = "crates/robust-polars" }
robust-viz = { path = "crates/robust-viz" }
hilbert-tf = { path = "crates/hilbert-tf" }

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
# Enable debug info for profiling
debug = true

[profile.bench]
lto = true
codegen-units = 1
# Enable debug info for profiling
debug = true

# Special profile for profiling with frame pointers
[profile.profiling]
inherits = "release"
debug = true
