[package]
name = "hilbert-tf"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "High-performance Hilbert transform implementation using FFT"
license.workspace = true

[dependencies]
rustfft = "6.2"
num-complex = "0.4"
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true }
criterion = { workspace = true }
anyhow = { workspace = true }
