[package]
name = "robust-confidence"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Confidence interval estimation for robust statistics"
license.workspace = true

[dependencies]
robust-core = { workspace = true }
robust-quantile = { workspace = true, optional = true }
robust-spread = { workspace = true, optional = true }
statrs = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
num-traits = { workspace = true }

[features]
default = []
parallel = ["robust-core/parallel", "robust-quantile?/parallel", "robust-spread?/parallel"]
quantile = ["robust-quantile"]
spread = ["robust-spread"]


[dev-dependencies]
approx = { workspace = true }
robust-spread = { workspace = true }
criterion = { workspace = true }
rand_distr = { workspace = true }
rand_chacha = { workspace = true }

[[bench]]
name = "confidence_benchmarks"
harness = false