[package]
name = "robust-effect"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Effect size measurement for robust statistics"
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
robust-core = { workspace = true }
robust-quantile = { workspace = true }
robust-spread = { workspace = true }
statrs = { workspace = true }
num-traits = { workspace = true }

[features]
default = []

[dev-dependencies]
approx = { workspace = true }
robust-confidence = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

