[package]
name = "robust-histogram"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
robust-core = { workspace = true }
robust-quantile = { workspace = true, optional = true }
thiserror = { workspace = true }
num-traits = { workspace = true }

[features]
default = ["quantile"]
quantile = ["dep:robust-quantile"]

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
criterion = { workspace = true }

[[example]]
name = "qrde_demo"
required-features = ["quantile"]

