[package]
name = "robust-modality"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
robust-core = { workspace = true }
robust-histogram = { workspace = true, features = ["quantile"] }
robust-quantile = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true, optional = true }
rand_distr = { workspace = true, optional = true }

[features]
default = []
parallel = ["robust-core/parallel", "robust-quantile/parallel"]
simd = ["robust-core/simd", "robust-quantile/simd"]
test-utils = ["dep:rand", "dep:rand_distr"]

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
criterion = { workspace = true }
# robust-viz = { path = "../robust-viz" }
robust-modality = { path = ".", features = ["test-utils"] }

[[example]]
name = "event_based_modality"

[[example]]
name = "qrde_modality"

