[package]
name = "robust-polars"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["statistics", "robust", "polars", "dataframe", "analysis"]
categories = ["science", "algorithms", "mathematics"]
description = "Polars integration for robust statistical analysis"

[dependencies]
# Polars
polars = { workspace = true, features = ["lazy", "rolling_window", "round_series"] }

# Robust stats crates
robust-core = { workspace = true }
robust-quantile = { workspace = true }
robust-spread = { workspace = true }
robust-confidence = { workspace = true }
robust-changepoint = { workspace = true }
robust-stability = { workspace = true }
robust-modality = { workspace = true }
robust-effect = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Utilities
num-traits = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }
approx = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }

[features]
default = []
lazy = ["polars/lazy"]
parallel = ["robust-core/parallel", "robust-quantile/parallel"]
simd = ["robust-core/simd"]