[package]
name = "robust-spread"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Robust spread measurements including MAD, QAD, and other robust scale estimators"
license.workspace = true

[dependencies]
robust-core = { workspace = true }
robust-quantile = { workspace = true, optional = true }
thiserror = { workspace = true }
statrs = { workspace = true }
num-traits = { workspace = true }

[features]
default = ["quantile"]
parallel = ["robust-core/parallel", "robust-quantile?/parallel"]
quantile = ["robust-quantile"]

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
criterion = { workspace = true }
robust-quantile = { workspace = true }

