[package]
name = "robust-stability"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description = "Robust stability and steady-state analysis for performance systems"
license.workspace = true

[dependencies]
robust-core = { workspace = true }
robust-spread = { workspace = true }
robust-quantile = { workspace = true }
hilbert-tf = { workspace = true }
nalgebra = { workspace = true }
statrs = { workspace = true }
thiserror = { workspace = true }
num-traits = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
criterion = { workspace = true }
csv = { workspace = true }
serde = { workspace = true }
proptest = { workspace = true }

[features]
default = []

